installer/minio/minio_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  rules:
    - host: minio.bszelag2.nlpnp.adsdcsp.com
      http:
        paths:
        - path: /
          backend:
            serviceName: test-minio
            servicePort: 9000
