installer/minio/minio_ing_tmpl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  rules:
    - host: <minio_external_uri>
      http:
        paths:
        - path: /
          backend:
            serviceName: <minio_service>
            servicePort: 9000
